--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+		<link rel="stylesheet" href="Styles/style.css">
   	</head>
   	<body>
 		<div id="myBooks">
+			<img src="Assets/logo.png" alt="Poch'Lib Logo" class="logo">
 			<h1 class="title">Poch'Lib</h1>
 			<h2 class="h2">Nouveau Livre</h2>
 			<hr>
@@ -14,5 +20,6 @@
 				<h2>Ma poch'liste</h2>
 			</div>
 		</div>
+		<script src="Scripts/app.js"></script>
   	</body>
 </html>
